# Taiwanese-Speech-Synthesis

./: README.md  UV_USAGE.md  gen_tts.py  generate_taiwanese_romanization.md  pyproject.toml  requirements.txt  sentences.txt  wavernn.py
